--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
           -if current_shop
             %ul.nav.pull-right
               %li.dropdown
-                =link_to shop_url, class: 'dropdown-toggle', data: { toggle: :dropdown } do
+                =link_to '#', class: 'dropdown-toggle', data: { toggle: :dropdown } do
                   =current_shop['name']
                   %b.caret
                 %ul.dropdown-menu
