--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,15 +4,15 @@
     %thead
       %tr
         %th 订单号
-        %th 支付状态
-        %th 发货状态
-        %th 总金额
+        %th 物流信息
     %tbody
       -@orders.each do |order|
         %tr
           %td=link_to order.name, order.admin_url, target: :_blank
           %td
-            %span.label{class: financial_class(order.financial_status)}=order.financial_status_name
-          %td
-            %span.label{class: fulfillment_class(order.fulfillment_status)}=order.fulfillment_status_name
-          %td=order.total_price
+            -order.fulfillments.each do |fulfillment|
+              %p
+                -if fulfillment.received
+                  %span.alert.alert-success(title="#{fulfillment.tracking_company} #{fulfillment.tracking_number}") 已签收
+                -else
+                  %span.alert(class="#{fulfillment.expire? ? 'alert-error' : 'alert-block'}")==#{fulfillment.tracking_company} #{fulfillment.tracking_number} 未签收
