send notify email.

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -69,3 +69,7 @@ body {
   text-align: center;
   margin-top: 45px;
   padding: 35px 0 36px; }
+
+.tooltip-inner {
+  max-width: 400px;
+  text-align: left; }
